--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "crypto": "^1.0.1",
+    "dot-env": "^0.0.1",
+    "dotenv": "^16.4.7",
     "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-razorpay": "^3.0.1",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^11.0.2"
